--- a/src/components/shared/CommonBackground/styles.module.scss
+++ b/src/components/shared/CommonBackground/styles.module.scss
@@ -1,6 +1,7 @@
 .layout {
   width: 100%;
   height: 100%;
+  background-color: #0b0d17;
 
   svg {
     position: absolute;
@@ -12,17 +13,18 @@
     background-color: #fff;
     border-radius: 50%;
   }
+}
 
-  nav {
-    position: absolute;
-    right: 0;
-    top: 40px;
-  }
+.nav {
+  position: absolute;
+  right: 0;
+  top: 40px;
 }
 
 .line {
   position: absolute;
   width: 36%;
+  max-width: calc(100vw - 950px);
   height: 1px;
   left: 167px;
   top: 88px;
