--- a/src/components/shared/Navigatoin/styles.module.scss
+++ b/src/components/shared/Navigatoin/styles.module.scss
@@ -4,6 +4,7 @@
   background: rgba(255, 255, 255, 0.04);
   backdrop-filter: blur(81.5485px);
   width: 57%;
+  min-width: 830px;
   height: 96px;
   font-family: "Barlow Condensed";
   font-size: 16px;
